Add IMAP Module

--- a/etc/mail.conf
+++ b/etc/mail.conf
@@ -5,7 +5,7 @@
 [DEFAULT]
 
 # Not used directly, but is typically referenced below in %()s format.
-install.dir=.
+install.dir=/root/work/src/github.com/shidec/smtpd
 
 #############################################################################
 [logging]
@@ -15,18 +15,20 @@ level=TRACE
 
 #############################################################################
 [smtp]
+# is available
+available=true
 
 # IPv4 address to listen for SMTP connections on.
-ip4.address=0.0.0.0
+ip4.address=165.227.210.22
 
 # IPv4 port to listen for SMTP connections on.
-ip4.port=25000
+ip4.port=25
 
 # used in SMTP greeting
-domain=smtpd.local
+domain=shidec-games.com
 
 # Allowable hosts
-allowed.hosts=localhost
+allowed.hosts=shidec-games.com
 
 # Trusted hosts (IP address)
 trusted.hosts=127.0.0.1
@@ -66,25 +68,68 @@ debug.path=/tmp/mails
 spam.regex=email(.*?)@yandex.ru|my profile is here:|my name is Natalia|e-mail:(.*?)@yandex.ru
 
 # Host based greylist enable: true or false
-greylist.host=true
+greylist.host=false
 
 # Mail from grey list enable: true or false
-greylist.from=true
+greylist.from=false
 
 # Rcpt to grey list enable: true or false
-greylist.to=true
+greylist.to=false
+
+#############################################################################
+[imap]
+# is available
+available=true
+
+# IPv4 address to listen for IMAP connections on.
+ip4.address=165.227.210.22
+
+# IPv4 port to listen for IMAP connections on.
+ip4.port=143
+
+# used in IMAP greeting
+domain=shidec-games.com
+
+# Maximum number of clients we allow
+max.clients=500
+
+# How long we allow a network connection to be idle before hanging up on the
+# client, IMAP RFC recommends at least 5 minutes (300 seconds).
+max.idle.seconds=300
+
+# Maximum allowable size of message body in bytes (including attachments)
+max.message.bytes=20480000
+
+# TLS certificate keys
+public.key=
+private.key=
+
+# Should we place messages into the datastore, or just throw them away
+# (for load testing): true or false
+store.messages=true
+
+# Should we enable xclient: true or false
+xclient=true
+
+# Should we enable to save mail debug: true or false
+debug=false
+
+# Path to the datastore, mail will be written into directory during debug
+debug.path=/tmp/mails
 
 #############################################################################
 [pop3]
+# is available
+available=true
 
 # IPv4 address to listen for POP3 connections on.
-ip4.address=0.0.0.0
+ip4.address=165.227.210.22
 
 # IPv4 port to listen for POP3 connections on.
-ip4.port=11000
+ip4.port=110
 
 # used in POP3 greeting
-domain=smtpd.local
+domain=shidec-games.com
 
 # How long we allow a network connection to be idle before hanging up on the
 # client, POP3 RFC requires at least 10 minutes (600 seconds).
@@ -92,9 +137,11 @@ max.idle.seconds=600
 
 #############################################################################
 [web]
+# is available
+available=true
 
 # IPv4 address to serve HTTP web interface on
-ip4.address=0.0.0.0
+ip4.address=165.227.210.22
 
 # IPv4 port to serve HTTP web interface on
 ip4.port=10025
