finally POP3 is working, refine later

--- a/etc/mail.conf
+++ b/etc/mail.conf
@@ -183,6 +183,25 @@ redis.port=6379
 # If redis is enabled, redis_message_channel is the redis channel incus will subscribe to for incomming messages from application.
 redis.channel=Incus
 
+
+# MTA configuration for sending email
+#############################################################################
+[mta]
+#is available
+available=true
+
+# host of mta
+host=mail.shidec-games.com
+
+# port of mta
+port=2525
+
+# username for mta
+username=
+
+# password for mta
+password=
+
 #############################################################################
 [datastore]
 
