Bug fixed relay to external mail server

--- a/etc/mail.conf
+++ b/etc/mail.conf
@@ -135,6 +135,8 @@ domain=shidec-games.com
 # client, POP3 RFC requires at least 10 minutes (600 seconds).
 max.idle.seconds=600
 
+# Maximum number of clients we allow
+max.clients=500
 #############################################################################
 [web]
 # is available
